Solved problems with overflow forgot to properly name id in css file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,13 +37,13 @@ h2{
 }
 
 #hero-image{
-    height: 600px;
+    height: 800px;
     width: 100%;
     background: url(../images/Football.jpg) no-repeat center center;
 }
 
-hero-outer{
-    height: 600px;
+#hero-outer{
+    height: 800px;
     width: 100%;
     overflow: hidden;
 }
